--- a/journal.org
+++ b/journal.org
@@ -6659,7 +6659,6 @@ So we probably need a rather precise prior, such as the following.
 ******* 1e-07 for intercept, 1e-10 for mu
 #+begin_src R :results output :session *R* :exports both
 dt = list(N=500,hosts=length(unique(tmp$cpu)),mnk=mnk,duration=duration, it_mean=1e-07,it_sd=1e-08,mu_mean=1e-10,mu_sd=1e-11,sigma_mean=1e-10,sigma_sd=1e-11,n_mean=1e-07,n_sd=1e-08)
-#réessayer avec variance=2xmean
 fit = sampling(sm,data=dt, iter=500, chains=4)
 #+end_src
 
@@ -6825,10 +6824,125 @@ is still roughly the same.
 Therefore, we conclude that this prior is precise enough to make a
 good fit.
 
-******* TODO A larger sd
-found out after many tests that this prior is fine except for the
-generated data, that gets completely off if we give anything less
-precise than sigma~(1e-12,1e-12)
+******* A larger sd
+#+begin_src R :results output :session *R* :exports both
+t_i=list()
+
+  t_i[[1]]=sample_n(select(filter(tmp, tmp$cpu==2), c("mnk","duration")),500)
+
+mnk=lapply(t_i, '[[', 1)
+duration=lapply(t_i, '[[', 2)
+#+end_src
+
+#+begin_src R :results output :session *R* :exports both
+dt = list(N=500,hosts=1,mnk=mnk,duration=duration, it_mean=1e-05,it_sd=2e-05,mu_mean=1e-10,mu_sd=2e-10,sigma_mean=1e-10,sigma_sd=2e-10,n_mean=1e-05,n_sd=2e-05)
+
+fit = sampling(sm,data=dt, iter=500, chains=4)
+#+end_src
+
+#+begin_src R :results output :session *R* :exports both
+print(fit, digits=15, pars=c("intercept[1]","mu[1]","sigma[1]","noise[1]"))
+#+end_src
+
+#+RESULTS:
+#+begin_example
+Inference for Stan model: 1b6de7dcd6c2bfbaa533ffd4a8d453e0.
+4 chains, each with iter=500; warmup=250; thin=1; 
+post-warmup draws per chain=250, total post-warmup draws=1000.
+
+                     mean      se_mean           sd          2.5%           25%
+intercept[1] 1.090203e-05 7.582157e-07 2.044511e-05 -2.760499e-05 -2.564062e-06
+mu[1]        7.028700e-11 1.450000e-13 4.337000e-12  6.196700e-11  6.727700e-11
+sigma[1]     1.002080e-10 7.000000e-15 2.130000e-13  1.000090e-10  1.000660e-10
+noise[1]     2.579419e-05 4.279570e-07 1.198261e-05  1.047854e-05  1.622844e-05
+                      50%          75%        97.5% n_eff      Rhat
+intercept[1] 1.028147e-05 2.386902e-05 5.044559e-05   727 1.0018872
+mu[1]        7.046700e-11 7.332200e-11 7.873800e-11   895 0.9995640
+sigma[1]     1.001430e-10 1.002690e-10 1.008050e-10  1007 0.9981252
+noise[1]     2.293918e-05 3.323984e-05 5.300310e-05   784 1.0036621
+
+Samples were drawn using NUTS(diag_e) at Mon Jun 24 10:24:11 2019.
+For each parameter, n_eff is a crude measure of effective sample size,
+and Rhat is the potential scale reduction factor on split chains (at 
+convergence, Rhat=1).
+#+end_example
+
+#+begin_src R :results output graphics :file ./images/trace_mh1_nh2_less_precise_prior_larger_sd.png :exports both :width 600 :height 400 :session *R* 
+stan_trace(fit, pars=c("intercept[1]","mu[1]","sigma[1]","noise[1]"))
+#+end_src
+
+#+RESULTS:
+[[file:./images/trace_mh1_nh2_less_precise_prior_larger_sd.png]]
+
+EDIT: We found out after several tests that this prior is fine except
+for the generated data, that gets completely off if we give anything
+less precise than sigma~(1e-12,2e-12). Indeed, as we can see with the
+current fit:
+
+#+begin_src R :results output graphics :file ./images/generated_data_less_precise_prior.png :exports both :width 600 :height 400 :session *R* 
+dt=data.frame(mnk=unlist(mnk),duration=unlist(duration))
+extracted=rstan::extract(fit)
+df_generated = data.frame(mnk=extracted$mnk_pos, duration=extracted$y_sim, origin='generated')
+df_generated = df_generated[sample(nrow(df_generated), nrow(dt)), ]
+dt$origin='initial'
+t = rbind(dt, df_generated)
+ggplot(data=t, aes(mnk,duration, color=origin)) + geom_point(alpha=0.5)
+#+end_src
+
+#+RESULTS:
+[[file:./images/generated_data_less_precise_prior.png]]
+
+However if we make the fit again with the given prior:
+
+#+begin_src R :results output :session *R* :exports both
+dt = list(N=500,hosts=1,mnk=mnk,duration=duration, it_mean=1e-05,it_sd=2e-05,mu_mean=1e-10,mu_sd=2e-10,sigma_mean=1e-12,sigma_sd=2e-12,n_mean=1e-05,n_sd=2e-05)
+
+fit = sampling(sm,data=dt, iter=500, chains=4)
+#+end_src
+
+#+begin_src R :results output :session *R* :exports both
+print(fit, digits=15, pars=c("intercept[1]","mu[1]","sigma[1]","noise[1]"))
+#+end_src
+
+#+RESULTS:
+#+begin_example
+Inference for Stan model: 1b6de7dcd6c2bfbaa533ffd4a8d453e0.
+4 chains, each with iter=500; warmup=250; thin=1; 
+post-warmup draws per chain=250, total post-warmup draws=1000.
+
+                     mean      se_mean           sd          2.5%          25%
+intercept[1] 1.764138e-05 8.849883e-07 1.923665e-05 -1.904337e-05 4.718654e-06
+mu[1]        7.018200e-11 7.000000e-15 2.620000e-13  6.966400e-11 7.001600e-11
+sigma[1]     5.792000e-12 8.000000e-15 1.930000e-13  5.437000e-12 5.660000e-12
+noise[1]     3.165352e-05 6.826439e-07 1.453043e-05  1.051057e-05 2.025669e-05
+                      50%          75%        97.5% n_eff      Rhat
+intercept[1] 1.838513e-05 3.069333e-05 5.419446e-05   472 1.0011187
+mu[1]        7.018600e-11 7.035900e-11 7.068400e-11  1236 0.9980055
+sigma[1]     5.782000e-12 5.921000e-12 6.177000e-12   517 1.0055723
+noise[1]     2.983367e-05 4.101263e-05 6.388082e-05   453 1.0025100
+
+Samples were drawn using NUTS(diag_e) at Mon Jun 24 10:42:05 2019.
+For each parameter, n_eff is a crude measure of effective sample size,
+and Rhat is the potential scale reduction factor on split chains (at 
+convergence, Rhat=1).
+#+end_example
+
+#+begin_src R :results output graphics :file ./images/generated_data_more_precise_prior.png :exports both :width 600 :height 400 :session *R* 
+dt=data.frame(mnk=unlist(mnk),duration=unlist(duration))
+extracted=rstan::extract(fit)
+df_generated = data.frame(mnk=extracted$mnk_pos, duration=extracted$y_sim, origin='generated')
+df_generated = df_generated[sample(nrow(df_generated), nrow(dt)), ]
+dt$origin='initial'
+t = rbind(dt, df_generated)
+ggplot(data=t, aes(mnk,duration, color=origin)) + geom_point(alpha=0.5)
+#+end_src
+
+#+RESULTS:
+[[file:./images/generated_data_more_precise_prior.png]]
+
+This time the generated data looks better, which incites us to choose
+this prior over the previous one.
+
 ***** EDIT With a M_H-2 N_H-2 model
 :LOGBOOK:  
 - State "DONE"       from "STARTED" [2019-06-17 lun. 16:08]
@@ -7064,7 +7178,251 @@ stan_trace(fit, pars=c("mu","sigma"))
 This time the results are completely off, with negative values and
 chains that don't converge.
 
-****** TODO With a less informative prior
+****** With a less informative prior
+#+begin_src R :results output :session *R* :exports both
+modelString = "data {
+    //The model's data
+
+    int<lower=0> N; //number of observations
+    int hosts; //number of different hosts
+    matrix[hosts,N] m; //N*hosts observations of the values of m, n and k
+    matrix[hosts,N] n;
+    matrix[hosts,N] k;   
+    matrix[hosts,N] duration; //N*hosts observations of the duration of dgemm
+
+    //The priors
+    
+    vector[5] mu_mean; //mu[1]=mnk, mu[2]=mn, mu[3]=mk, mu[4]=nk, mu[5]=intercept
+    vector[5] mu_sd;
+    vector[5] sigma_mean;
+    vector[5] sigma_sd;
+}
+transformed data {
+    //The calculated data
+
+    matrix[hosts,N] mnk=m .* n .* k;
+    matrix[hosts,N] mn=m .* n;
+    matrix[hosts,N] mk=m .* k;
+    matrix[hosts,N] nk=n .* k;
+}
+parameters {
+    //The raw parameters
+
+    matrix[hosts,5] mu_raw;
+    matrix<lower=0>[hosts,5] sigma_raw;
+}
+transformed parameters {
+    //The real parameters
+
+    matrix[hosts,5] mu;
+    matrix<lower=0>[hosts,5] sigma;
+
+    //The priors for the real parameters
+    for(j in 1:5){
+      mu[,j] = mu_mean[j] + mu_raw[,j] * mu_sd[j];
+      sigma[,j] = sigma_mean[j] + sigma_raw[,j] * sigma_sd[j];
+    }
+    
+}
+model {
+    //The priors for the raw parameters
+
+    for(i in 1:hosts){
+      mu_raw[i] ~ normal(0,1);
+      sigma_raw[i] ~ normal(0,1);
+    }
+
+    //The likelihood
+
+    for(i in 1:hosts){
+      duration[i] ~ normal(mu[i,1]*mnk[i]+mu[i,2]*mn[i]+mu[i,3]*mk[i]+mu[i,4]*nk[i]+mu[i,5], sigma[i,1]*mnk[i]+sigma[i,2]*mn[i]+sigma[i,3]*mk[i]+sigma[i,4]*nk[i]+sigma[i,5]);
+    }
+}
+
+generated quantities {
+  //The generated data
+
+  vector[hosts] mnk_pos;
+  vector[hosts] mn_pos;
+  vector[hosts] mk_pos;
+  vector[hosts] nk_pos;
+  vector[hosts] y_sim;
+  for(i in 1:hosts){
+     mnk_pos[i] = mnk[i][categorical_rng(rep_vector(1,N) / N)];
+     mn_pos[i] = mn[i][categorical_rng(rep_vector(1,N) / N)];
+     mk_pos[i] = mk[i][categorical_rng(rep_vector(1,N) / N)];
+     nk_pos[i] = nk[i][categorical_rng(rep_vector(1,N) / N)];
+     y_sim[i] = normal_rng(mu[i,1]*mnk_pos[i]+mu[i,2]*mn_pos[i]+mu[i,3]*mk_pos[i]+mu[i,4]*nk_pos[i]+mu[i,5], sigma[i,1]*mnk_pos[i]+sigma[i,2]*mn_pos[i]+sigma[i,3]*mk_pos[i]+sigma[i,4]*nk_pos[i]+sigma[i,5]);
+  }
+}
+"
+sm = stan_model(model_code = modelString)
+#+end_src
+
+#+begin_src R :results output :session *R* :exports both
+t_i=list()
+t_i[[1]]=sample_n(select(filter(tmp, tmp$cpu==2), c("m","n","k", "mnk", "duration")),500)
+
+m=lapply(t_i, '[[', 1)
+n=lapply(t_i, '[[', 2)
+k=lapply(t_i, '[[', 3)
+duration=lapply(t_i, '[[', 5)
+#+end_src
+
+#+begin_src R :results output :session *R* :exports both
+dt = list(N=500,hosts=1,m=m,n=n,k=k,duration=duration,mu_mean=c(0,0,0,0,0),mu_sd=c(1,1,1,1,1),sigma_mean=c(0,0,0,0,0),sigma_sd=c(1,1,1,1,1))
+
+fit = sampling(sm,data=dt, iter=500, chains=4)
+#+end_src
+
+#+RESULTS:
+#+begin_example 
+Warning messages:
+1: There were 935 divergent transitions after warmup. Increasing adapt_delta above 0.8 may help. See
+http://mc-stan.org/misc/warnings.html#divergent-transitions-after-warmup 
+2: There were 61 transitions after warmup that exceeded the maximum treedepth. Increase max_treedepth above 10. See
+http://mc-stan.org/misc/warnings.html#maximum-treedepth-exceeded 
+3: There were 4 chains where the estimated Bayesian Fraction of Missing Information was low. See
+http://mc-stan.org/misc/warnings.html#bfmi-low 
+4: Examine the pairs() plot to diagnose sampling problems
+#+end_example
+
+#+begin_src R :results output :session *R* :exports both
+print(fit,digits=15,pars=c("mu","sigma"))
+#+end_src
+
+#+RESULTS:
+#+begin_example
+Inference for Stan model: a845d2ce77b9d1ff9cdea0688f8199c6.
+4 chains, each with iter=500; warmup=250; thin=1; 
+post-warmup draws per chain=250, total post-warmup draws=1000.
+
+                    mean      se_mean           sd          2.5%           25%
+mu[1,1]    -5.390716e-08 6.207589e-08 4.511934e-07 -8.201245e-07 -3.590420e-07
+mu[1,2]     9.626851e-05 3.256895e-05 2.407680e-04 -4.378289e-04 -3.626463e-05
+mu[1,3]    -1.961171e-05 6.928321e-05 2.366632e-04 -5.266030e-04 -1.383529e-04
+mu[1,4]    -4.025679e-05 5.994397e-05 2.855194e-04 -5.464615e-04 -3.030361e-04
+mu[1,5]     1.336455e-01 7.582949e-01 1.073466e+00 -1.426411e+00 -5.474506e-01
+sigma[1,1]  1.247495e-06 1.939939e-07 2.784461e-07  7.579669e-07  1.190016e-06
+sigma[1,2]  1.285690e-03 2.793520e-04 4.008223e-04  7.323733e-04  9.475212e-04
+sigma[1,3]  1.097950e-03 2.316768e-04 3.329931e-04  6.248159e-04  9.005825e-04
+sigma[1,4]  1.596801e-03 2.901153e-04 4.197979e-04  1.136945e-03  1.172438e-03
+sigma[1,5]  1.495266e+00 7.403880e-01 1.048118e+00  3.206677e-01  7.598894e-01
+                     50%          75%        97.5% n_eff        Rhat
+mu[1,1]    -1.079675e-07 2.412885e-07 8.601380e-07    53    1.100144
+mu[1,2]     1.028815e-04 2.399519e-04 5.076952e-04    55    1.098556
+mu[1,3]    -4.796993e-05 1.727016e-04 3.957216e-04    12    1.247846
+mu[1,4]    -6.530302e-06 2.359704e-04 4.234992e-04    23    1.163371
+mu[1,5]     3.007066e-01 9.798934e-01 1.361717e+00     2 1055.141454
+sigma[1,1]  1.366538e-06 1.451263e-06 1.542581e-06     2    6.457373
+sigma[1,2]  1.403693e-03 1.649558e-03 1.726901e-03     2    7.278072
+sigma[1,3]  1.157882e-03 1.523733e-03 1.584217e-03     2    5.779916
+sigma[1,4]  1.737548e-03 2.078867e-03 2.229657e-03     2    5.979442
+sigma[1,5]  1.264249e+00 2.002816e+00 3.125611e+00     2  618.211311
+
+Samples were drawn using NUTS(diag_e) at Mon Jun 24 11:09:09 2019.
+For each parameter, n_eff is a crude measure of effective sample size,
+and Rhat is the potential scale reduction factor on split chains (at 
+convergence, Rhat=1).
+#+end_example
+
+Compared to the previous results:
+
+#+RESULTS:
+#+begin_example
+mu[2,1]    6.455300e-11
+mu[2,2]    3.614600e-11
+mu[2,3]    1.854931e-09
+mu[2,4]    3.292596e-09
+mu[2,5]    7.490877e-07
+sigma[2,1] 1.472000e-12
+sigma[2,2] 1.378400e-11
+sigma[2,3] 2.881900e-11
+sigma[2,4] 3.378400e-11
+sigma[2,5] 7.394641e-07
+#+end_example
+
+#+begin_src R :results output graphics :file ./images/trace_mh2_nh2_vague_prior.png :exports both :width 600 :height 400 :session *R* 
+stan_trace(fit, pars=c("mu","sigma"))
+#+end_src
+
+#+RESULTS:
+[[file:./images/trace_mh2_nh2_vague_prior.png]]
+
+Once again the prior isn't informative enough for the chains to
+converge, and as a result the parameters found are really far from the
+results we found with an ultra precise prior.
+
+We'll try by adding init values.
+
+#+begin_src R :results output :session *R* :exports both
+dt = list(N=500,hosts=1,m=m,n=n,k=k,duration=duration,mu_mean=c(0,0,0,0,0),mu_sd=c(1,1,1,1,1),sigma_mean=c(0,0,0,0,0),sigma_sd=c(1,1,1,1,1))
+initfunction=function(){
+  list(mu=array(rep(1e-10,5)),sigma=array(rep(1e-11,5)))
+}
+fit = sampling(sm,data=dt, iter=500, chains=4,control=list(adapt_delta=0.9))
+#+end_src
+
+#+RESULTS:
+#+begin_example
+Warning messages:
+1: There were 803 divergent transitions after warmup. Increasing adapt_delta above 0.9 may help. See
+http://mc-stan.org/misc/warnings.html#divergent-transitions-after-warmup 
+2: There were 192 transitions after warmup that exceeded the maximum treedepth. Increase max_treedepth above 10. See
+http://mc-stan.org/misc/warnings.html#maximum-treedepth-exceeded 
+3: There were 4 chains where the estimated Bayesian Fraction of Missing Information was low. See
+http://mc-stan.org/misc/warnings.html#bfmi-low 
+4: Examine the pairs() plot to diagnose sampling problems
+#+end_example
+
+#+begin_src R :results output :session *R* :exports both
+print(fit,digits=15,pars=c("mu","sigma"))
+#+end_src
+
+#+RESULTS:
+#+begin_example
+Inference for Stan model: a845d2ce77b9d1ff9cdea0688f8199c6.
+4 chains, each with iter=500; warmup=250; thin=1; 
+post-warmup draws per chain=250, total post-warmup draws=1000.
+
+                    mean      se_mean           sd          2.5%           25%
+mu[1,1]    -2.373467e-08 8.838792e-08 6.186319e-07 -1.243883e-06 -3.650120e-07
+mu[1,2]    -1.824185e-05 3.570049e-05 2.714724e-04 -5.004053e-04 -1.923372e-04
+mu[1,3]     8.639916e-06 2.836964e-05 1.978241e-04 -3.229775e-04 -1.248601e-04
+mu[1,4]     7.432122e-05 2.566181e-04 9.618853e-04 -1.857992e-03 -5.102631e-04
+mu[1,5]    -2.465575e-01 8.350299e-01 1.182097e+00 -1.651922e+00 -1.280816e+00
+sigma[1,1]  5.987543e-07 2.723443e-07 3.958305e-07  1.861419e-07  3.629936e-07
+sigma[1,2]  5.603975e-04 1.424728e-04 2.219819e-04  2.667308e-04  4.659338e-04
+sigma[1,3]  6.170286e-04 2.420497e-04 3.512789e-04  2.110534e-04  2.919178e-04
+sigma[1,4]  1.083814e-02 5.565413e-03 8.147336e-03  3.185167e-03  3.647265e-03
+sigma[1,5]  9.139944e-01 7.665998e-01 1.085223e+00  2.747707e-01  2.847648e-01
+                     50%          75%        97.5% n_eff       Rhat
+mu[1,1]    -4.944809e-09 3.671287e-07 1.158646e-06    49   1.125477
+mu[1,2]    -8.668685e-06 9.891446e-05 6.603797e-04    58   1.146238
+mu[1,3]    -1.173591e-05 1.109685e-04 6.280439e-04    49   1.052765
+mu[1,4]     1.386897e-04 2.206292e-04 2.788562e-03    14   1.560789
+mu[1,5]    -2.468013e-01 7.926190e-01 1.154775e+00     2 501.342158
+sigma[1,1]  4.680579e-07 1.008403e-06 1.230923e-06     2   4.583818
+sigma[1,2]  4.906494e-04 7.927942e-04 9.309363e-04     2   2.612565
+sigma[1,3]  6.031409e-04 1.092643e-03 1.122138e-03     2   4.812717
+sigma[1,4]  9.354324e-03 1.989160e-02 2.886730e-02     2   5.326396
+sigma[1,5]  2.927728e-01 9.252592e-01 2.795971e+00     2 707.834897
+
+Samples were drawn using NUTS(diag_e) at Mon Jun 24 11:19:36 2019.
+For each parameter, n_eff is a crude measure of effective sample size,
+and Rhat is the potential scale reduction factor on split chains (at 
+convergence, Rhat=1).
+#+end_example
+
+#+begin_src R :results output graphics :file ./images/trace_mh2_nh2_vague_prior_init_values.png :exports both :width 600 :height 400 :session *R* 
+stan_trace(fit, pars=c("mu","sigma"))
+#+end_src
+
+#+RESULTS:
+[[file:./images/trace_mh2_nh2_vague_prior_init_values.png]]
+
+The results are not much better, even with init values.
+
 ****** With a precise prior
 We won't try again with falsely informative priors as we've seen the
 result: it's extremely unlikely to work; instead we'll test with
@@ -7149,6 +7507,7 @@ stan_trace(fit, pars=c("mu","sigma"))
 
 #+RESULTS:
 [[file:./images/trace_mh2_nh2_chosen_prior.png]]
+****** TODO With a precise prior and a larger sd
 *** 2019-06-17 monday
 **** Attended Thanos Andreou's thesis on Auditing, Measuring, and Bringing Transparency to Social Media Advertising Ecosystems
 **** REWORK <<Hierarchical model with independant parameters>>
@@ -7356,7 +7715,7 @@ With the help of Tom who debugged our LateX issues, we tried our hand
 again at making slides with org-mode, using Arnaud's model.
 *** 2019-06-20 thursday
 **** Finished the slides
-**** Plotting the posterior with more observations
+**** Plotting the posterior with more iterations
 #+begin_src R :results output :session *R* :exports both
 library(rstan)
 library(dplyr)
@@ -7442,154 +7801,66 @@ sm = stan_model(model_code = modelString)
 #+begin_src R :results output :session *R* :exports both
 t_i=list()
 for(i in 1:length(unique(tmp$cpu))){
-  t_i[[i]]=sample_n(select(filter(tmp, tmp$cpu==i+1), c("mnk","duration")),2000)
+  t_i[[i]]=sample_n(select(filter(tmp, tmp$cpu==i+1), c("mnk","duration")),500)
 }
 mnk=lapply(t_i, '[[', 1)
 duration=lapply(t_i, '[[', 2)
 #+end_src
 
 #+begin_src R :results output :session *R* :exports both
-dt = list(N=2000,hosts=length(unique(tmp$cpu)),mnk=mnk,duration=duration,it_mean=1e-05,it_sd=1e-05,mu_mean=1e-10,mu_sd=1e-10,sigma_mean=1e-12,sigma_sd=1e-12,n_mean=1e-05,n_sd=1e-05)
+dt = list(N=500,hosts=length(unique(tmp$cpu)),mnk=mnk,duration=duration,it_mean=1e-05,it_sd=1e-05,mu_mean=1e-10,mu_sd=1e-10,sigma_mean=1e-12,sigma_sd=1e-12,n_mean=1e-05,n_sd=1e-05)
 
-fit = sampling(sm,data=dt, iter=450, chains=3)
+fit = sampling(sm,data=dt, iter=1000, chains=4)
+#+end_src
+
+#+begin_src R :results output graphics :file ./images/parameters_hist.png :exports both :width 600 :height 400 :session *R* 
+stan_hist(fit,pars=c("intercept[1]","mu[1]","sigma[1]","noise[1]"))
 #+end_src
 
 #+RESULTS:
-#+begin_example
+[[file:./images/parameters_hist.png]]
 
-SAMPLING FOR MODEL 'aac275819ace426708b4ce4313ed739c' NOW (CHAIN 1).
-Chain 1: 
-Chain 1: Gradient evaluation took 0.023837 seconds
-Chain 1: 1000 transitions using 10 leapfrog steps per transition would take 238.37 seconds.
-Chain 1: Adjust your expectations accordingly!
-Chain 1: 
-Chain 1: 
-Chain 1: Iteration:   1 / 450 [  0%]  (Warmup)
-Chain 1: Iteration:  45 / 450 [ 10%]  (Warmup)
-Chain 1: Iteration:  90 / 450 [ 20%]  (Warmup)
-Chain 1: Iteration: 135 / 450 [ 30%]  (Warmup)
-Chain 1: Iteration: 180 / 450 [ 40%]  (Warmup)
-Chain 1: Iteration: 225 / 450 [ 50%]  (Warmup)
-Chain 1: Iteration: 226 / 450 [ 50%]  (Sampling)
-Chain 1: Iteration: 270 / 450 [ 60%]  (Sampling)
-Chain 1: Iteration: 315 / 450 [ 70%]  (Sampling)
-Chain 1: Iteration: 360 / 450 [ 80%]  (Sampling)
-Chain 1: Iteration: 405 / 450 [ 90%]  (Sampling)
-Chain 1: Iteration: 450 / 450 [100%]  (Sampling)
-Chain 1: 
-Chain 1:  Elapsed Time: 1305.7 seconds (Warm-up)
-Chain 1:                314.951 seconds (Sampling)
-Chain 1:                1620.65 seconds (Total)
-Chain 1: 
-
-SAMPLING FOR MODEL 'aac275819ace426708b4ce4313ed739c' NOW (CHAIN 2).
-Chain 2: 
-Chain 2: Gradient evaluation took 0.025043 seconds
-Chain 2: 1000 transitions using 10 leapfrog steps per transition would take 250.43 seconds.
-Chain 2: Adjust your expectations accordingly!
-Chain 2: 
-Chain 2: 
-Chain 2: Iteration:   1 / 450 [  0%]  (Warmup)
-Chain 2: Iteration:  45 / 450 [ 10%]  (Warmup)
-Chain 2: Iteration:  90 / 450 [ 20%]  (Warmup)
-Chain 2: Iteration: 135 / 450 [ 30%]  (Warmup)
-Chain 2: Iteration: 180 / 450 [ 40%]  (Warmup)
-Chain 2: Iteration: 225 / 450 [ 50%]  (Warmup)
-Chain 2: Iteration: 226 / 450 [ 50%]  (Sampling)
-Chain 2: Iteration: 270 / 450 [ 60%]  (Sampling)
-Chain 2: Iteration: 315 / 450 [ 70%]  (Sampling)
-Chain 2: Iteration: 360 / 450 [ 80%]  (Sampling)
-Chain 2: Iteration: 405 / 450 [ 90%]  (Sampling)
-Chain 2: Iteration: 450 / 450 [100%]  (Sampling)
-Chain 2: 
-Chain 2:  Elapsed Time: 1234.94 seconds (Warm-up)
-Chain 2:                158.446 seconds (Sampling)
-Chain 2:                1393.39 seconds (Total)
-Chain 2: 
-
-SAMPLING FOR MODEL 'aac275819ace426708b4ce4313ed739c' NOW (CHAIN 3).
-Chain 3: 
-Chain 3: Gradient evaluation took 0.022039 seconds
-Chain 3: 1000 transitions using 10 leapfrog steps per transition would take 220.39 seconds.
-Chain 3: Adjust your expectations accordingly!
-Chain 3: 
-Chain 3: 
-Chain 3: Iteration:   1 / 450 [  0%]  (Warmup)
-Chain 3: Iteration:  45 / 450 [ 10%]  (Warmup)
-Chain 3: Iteration:  90 / 450 [ 20%]  (Warmup)
-Chain 3: Iteration: 135 / 450 [ 30%]  (Warmup)
-Chain 3: Iteration: 180 / 450 [ 40%]  (Warmup)
-Chain 3: Iteration: 225 / 450 [ 50%]  (Warmup)
-Chain 3: Iteration: 226 / 450 [ 50%]  (Sampling)
-Chain 3: Iteration: 270 / 450 [ 60%]  (Sampling)
-Chain 3: Iteration: 315 / 450 [ 70%]  (Sampling)
-Chain 3: Iteration: 360 / 450 [ 80%]  (Sampling)
-Chain 3: Iteration: 405 / 450 [ 90%]  (Sampling)
-Chain 3: Iteration: 450 / 450 [100%]  (Sampling)
-Chain 3: 
-Chain 3:  Elapsed Time: 1748.14 seconds (Warm-up)
-Chain 3:                786.417 seconds (Sampling)
-Chain 3:                2534.56 seconds (Total)
-Chain 3:
-#+end_example
+Here we have the histogram of our parameters.
 
 #+begin_src R :results output :session *R* :exports both
-print(fit, digits=15,pars=c("intercept[1]","mu[1]","sigma[1]","noise[1]"))
-#+end_src
-
-#+RESULTS:
-#+begin_example
-Inference for Stan model: aac275819ace426708b4ce4313ed739c.
-3 chains, each with iter=450; warmup=225; thin=1; 
-post-warmup draws per chain=225, total post-warmup draws=675.
-
-                     mean      se_mean           sd          2.5%          25%
-intercept[1] 2.373218e-06 1.494437e-07 3.481054e-06 -4.623710e-06 1.451509e-07
-mu[1]        7.061600e-11 6.000000e-15 1.680000e-13  7.031300e-11 7.050300e-11
-sigma[1]     8.114000e-12 5.000000e-15 1.230000e-13  7.871000e-12 8.037000e-12
-noise[1]     1.149292e-05 5.272804e-08 1.573881e-06  1.005182e-05 1.039819e-05
-                      50%          75%        97.5% n_eff      Rhat
-intercept[1] 2.437688e-06 4.723092e-06 8.974229e-06   543 1.0004612
-mu[1]        7.061500e-11 7.072500e-11 7.094200e-11   671 0.9980708
-sigma[1]     8.113000e-12 8.193000e-12 8.367000e-12   734 0.9981126
-noise[1]     1.099513e-05 1.208400e-05 1.593800e-05   891 1.0014252
-
-Samples were drawn using NUTS(diag_e) at Thu Jun 20 16:51:33 2019.
-For each parameter, n_eff is a crude measure of effective sample size,
-and Rhat is the potential scale reduction factor on split chains (at 
-convergence, Rhat=1).
-#+end_example
-
-Compared to the previous results:
-
-#+RESULTS:
-#+begin_example
-                     mean      se_mean           sd         2.5%          25%
-intercept[1] 7.677801e-07 1.455665e-09 7.648153e-08 6.207045e-07 7.144779e-07
-mu[1]        7.027000e-11 4.000000e-15 2.130000e-13 6.986600e-11 7.013200e-11
-sigma[1]     4.634000e-12 1.000000e-15 9.300000e-14 4.446000e-12 4.571000e-12
-noise[1]     7.424895e-07 1.283709e-09 7.598378e-08 5.971960e-07 6.907532e-07
-#+end_example
-
-#+begin_src R :results output graphics :file (org-babel-temp-file "figure" ".png") :exports both :width 600 :height 400 :session *R* 
 extracted=rstan::extract(fit)
+v=rep(1:64,each=2000)
+dtf=data.frame(intercept=matrix(unlist(extracted$intercept),nrow=length(extracted$intercept),byrow=T), mu=matrix(unlist(extracted$mu), nrow=length(extracted$mu), byrow=T), sigma=matrix(unlist(extracted$sigma), nrow=length(extracted$sigma), byrow=T),cpu=v)
+dtt=data.frame(intercept=colMeans(extracted$intercept),mu=colMeans(extracted$mu),sigma=colMeans(extracted$sigma))
+#+end_src
+
+#+begin_src R :results output graphics :file ./images/mu_on_sigma_ellipses.png :exports both :width 600 :height 400 :session *R* 
+ggplot(data=dtf)+stat_ellipse(mapping=aes(sigma,mu,color=factor(cpu)),alpha=0.5)+stat_ellipse(data=dtt,mapping=aes(sigma,mu))
+#+end_src
+
+#+RESULTS:
+[[file:./images/mu_on_sigma_ellipses.png]]
+
+For this graph, the ellipse has roughly the same shape as before, and
+we can see that the variance for the parameters is not the same for
+every host (some ellipses are larger than others).
+
+As for the intercept:
+
+#+begin_src R :results output graphics :file ./images/mu_on_intercept_ellipses.png :exports both :width 600 :height 400 :session *R* 
+ggplot(data=dtf)+stat_ellipse(mapping=aes(intercept,mu,color=factor(cpu)),alpha=0.5)+stat_ellipse(data=dtt,mapping=aes(intercept,mu))
+#+end_src
+
+#+RESULTS:
+[[file:./images/mu_on_intercept_ellipses.png]]
+
+This time the graph is really different, mostly because we lost some
+precision with the prior so there's a higher standard deviation for
+the intercept than before.
+
+#+begin_src R :results output graphics :file ./images/mu_on_intercept_ellipses_means.png :exports both :width 600 :height 400 :session *R* 
 cpu=1:64
-dtf=data.frame(intercept=extracted$intercept,mu=extracted$mu,sigma=extracted$sigma,mm=colMeans(extracted$mu),ms=colMeans(extracted$sigma))
-nrow(dtf)
+ggplot(dtt,aes(x=intercept,y=mu)) + stat_ellipse() + geom_point(aes(color=factor(cpu)))
 #+end_src
 
 #+RESULTS:
-[[file:/tmp/babel-22717IFn/figure22717IMb.png]]
+[[file:./images/mu_on_intercept_ellipses_means.png]]
 
-#+begin_src R :results output :session *R* :exports both
-
-ggplot(data=dtf)+stat_ellipse(mapping=aes(sigma.1,mu.1),colour="blue")+stat_ellipse(aes(sigma.2,mu.2),colour="red")+stat_ellipse(mapping=aes(sigma.3,mu.3),colour="green")+stat_ellipse(mapping=aes(sigma.4,mu.4),color="pink")+stat_ellipse(mapping=aes(ms,mm))
-#+end_src
-
-#+RESULTS:
-[[file:/tmp/babel-22717IFn/figure227177BV.png]]
-
-
-
-
-dtf=data.frame(intercept=extracted$intercept,mu=extracted$mu,sigma=extracted$sigma)
+However if we look at the same graph with the means instead of all the
+observations, it doesn't change much from before. We have to see how
+the posterior would be with a bigger sample.
